# e2-imageloader-rs

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yaml  test.yaml
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: dialog.json  events.json  store.json
src-tauri/icons/: icon.icns
src-tauri/src/: compression.rs  game_path.rs  image_processing.rs  main.rs  options.rs  watcher.rs
src/assets/: e2-imageloader.txt
src/components/: ImageViewer.vue  Separator.vue  Toasts.vue
src/components/navbar/: GamePath.vue  LocaleSelector.vue  NavBar.vue
src/components/sidebar/: AutoMode.vue  FileUpload.vue  OptionSelector.vue  SideBar.vue
src/locales/: en.json  fr.json  i18n.ts
src/store/: options.ts
src/utils/: processing.ts  toasts.ts
