[package]
name = "e2-imageloader"
version = "1.0.0"
description = "E2 image loader"
authors = ["NiTrO0FuN"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25.9"
notify = "8.1.0"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"

[profile.release]
codegen-units = 1
lto = true
strip = true
